--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
     #   with:
     #     name: apk
     #     path: build/app/outputs/apk/alpha/release/app-alpha-release.apk
-    - run: curl https://upload.testfairy.com/api/upload -F api_key=${{ secrets.TEST_FAIRY_API_KEY }} -F comment="Github Build" -F file=build/app/outputs/apk/alpha/release/app-alpha-release.apk
+    - run: curl https://upload.testfairy.com/api/upload -F api_key=${{ secrets.TEST_FAIRY_API_KEY }} -F comment="Github Build" -F file=@build/app/outputs/apk/alpha/release/app-alpha-release.apk
