--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-        
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
@@ -25,7 +24,5 @@ jobs:
     - run: flutter pub get
     - run: flutter test
     - run: flutter build apk --flavor beta
-
-    - uses: wei/curl@v1
-      with:
-        args: https://upload.testfairy.com/api/upload -F api_key=${{ secrets.TEST_FAIRY_API_KEY }} -F comment="Github Build" -F file=@build/app/outputs/apk/alpha/release/app-alpha-release.apk
+    
+    - run: curl https://upload.testfairy.com/api/upload -F api_key=${{ secrets.TEST_FAIRY_API_KEY }} -F comment="Github Build" -F file=@build/app/outputs/apk/alpha/release/app-alpha-release.apk
